<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agrobot_actuation</name>
  <version>0.0.0</version>
  <description>Seed and Removal Nodes</description>
  <maintainer email="san63@byu.edu">steff</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>agrobot_interfaces</depend>

  <exec_depend>python3-pgiozero</exec_depend>
  <exec_depend>python3-lgpio</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_mypy</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
